@@ -1,8 +1,8 @@
 sudo: true
 language: perl
 perl:
+   - '5.10'
    - '5.14'
-   - '5.16'
    - '5.18'
    - '5.20'
    - '5.22'
