@@ -138,7 +138,7 @@
    "provides" : {
       "DBIx::Class::Visualizer" : {
          "file" : "lib/DBIx/Class/Visualizer.pm",
-         "version" : "0.0100"
+         "version" : "0.0101"
       }
    },
    "release_status" : "stable",
@@ -153,7 +153,7 @@
          "web" : "https://github.com/Csson/p5-DBIx-Class-Visualizer"
       }
    },
-   "version" : "0.0100",
+   "version" : "0.0101",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.020001"
@@ -654,7 +654,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "0.0100",
+                  "tag" : "0.0101",
                   "tag_format" : "%v",
                   "tag_message" : "Release %v%n%n%c"
                },
