@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-09-04 16:58:46 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-09-05 09:07:02 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0312
 
@@ -133,7 +133,7 @@ release_branch = release
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.14 5.16 5.18 5.20 5.22
+perl_version = 5.10 5.14 5.18 5.20 5.22
 post_before_install = sudo apt-get update -qq
 post_before_install = sudo apt-get install -y graphviz
 pre_install = cpanm GraphViz2
