@@ -25,6 +25,7 @@ plugins:
   - +config: Author::CSSON
 
   - +extend_plugin: TravisYML
+    perl_version: 5.10 5.14 5.18 5.20 5.22
     sudo: 1
     post_before_install:
      - sudo apt-get update -qq
