@@ -9,44 +9,52 @@ package DBIx::Class::Visualizer;
 our $VERSION = '0.0101';
 
 use GraphViz2;
-use List::Util qw/any/;
+use Log::Handler;
+use List::Util qw/any none/;
 use DateTime::Tiny;
 use Moo;
+use Types::Standard qw/ArrayRef RegexpRef Maybe/;
 
-#has logger => (
-#    is => 'ro',
-#    default => sub {
-#        my $logger = Log::Handler->new;
-#        $logger->add(screen => {
-#            maxlevel => 'debug',
-#            minlevel => 'error',
-#            message_layout => '%m',
-#
-#        });
-#        return $logger;
-#    },
-#);
+has logger => (
+    is => 'ro',
+    default => sub {
+        my $logger = Log::Handler->new;
+        $logger->add(
+            screen => {
+                maxlevel => 'debug',
+                minlevel => 'error',
+                message_layout => '%m',
+            },
+        );
+        return $logger;
+    },
+);
 has graphviz_config => (
     is => 'ro',
     lazy => 1,
     default => sub {
         my $self = shift;
+        my %label = $self->single_result_source
+                  ? ()
+                  : (label => sprintf ('%s (version %s) rendered by DBIx::Class::Visualizer %s.', ref $self->schema, $self->schema->schema_version, DateTime::Tiny->now->as_string))
+                  ;
 
         return +{
             global => {
                 directed => 1,
                 smoothing => 'none',
                 overlap => 'false',
+                logger => $self->logger,
             },
             graph => {
                 rankdir => 'LR',
                 splines => 'true',
-                label => sprintf ('%s (version %s) rendered by DBIx::Class::Visualizer %s.', ref $self->schema, $self->schema->schema_version, DateTime::Tiny->now->as_string),
+                %label,
                 fontname => 'helvetica',
-                fontsize => 10,
+                fontsize => 8,
                 labeljust => 'l',
-                nodesep => 0.28,
-                ranksep => 0.36,
+                nodesep => 0.38,
+                ranksep => 0.46,
             },
             node => {
                 fontname => 'helvetica',
@@ -58,8 +66,8 @@ has graphviz_config => (
 has graph => (
     is => 'ro',
     lazy => 1,
-    init_arg => undef,
     builder => '_build_graph',
+    handles => [qw/run/],
 );
 sub _build_graph {
     return GraphViz2->new(shift->graphviz_config);
@@ -68,6 +76,30 @@ has schema => (
     is => 'ro',
     required => 1,
 );
+has result_sources => (
+    is => 'rw',
+    isa => ArrayRef,
+    lazy => 1,
+    default => sub {
+        [shift->schema->sources],
+    },
+);
+has single_result_source => (
+    is => 'ro',
+    default => 0,
+);
+has degrees_of_separation => (
+    is => 'ro',
+    default => 1,
+);
+
+has skip_result_sources => (
+    is => 'rw',
+    isa => Maybe[RegexpRef],
+    predicate => 1,
+);
+
+
 has added_relationships => (
     is => 'ro',
     default => sub { +{} },
@@ -77,14 +109,61 @@ has ordered_relationships => (
     default => sub { [] },
 );
 
+around BUILDARGS => sub {
+    my $orig = shift;
+    my $class = shift;
+    my %args = @_;
+
+    # If we should display only one result source and the user has not passed single_result_source => 0, then single_result_source => 1.
+    if(exists $args{'result_sources'} && scalar @{ $args{'result_sources'} } && !exists $args{'single_result_source'}) {
+        $args{'single_result_source'} = 1;
+    }
+
+    return $class->$orig(%args);
+};
+
 sub BUILD {
     my $self = shift;
-    my @sources = grep { !/^View::/ } $self->schema->sources;
+    my @sources = grep { my $regex = $self->skip_result_sources; !($self->has_skip_result_sources && m/$regex/) } @{ $self->result_sources };
 
-    foreach my $source_name (sort @sources) {
+    $self->logger->debug('sources ', @sources);
+
+    if($self->single_result_source) {
+        for (1..$self->degrees_of_separation) {
+            say '->';
+            my @add_sources;
+            SOURCE:
+            for my $source_name (@sources) {
+                say "sources:    @sources";
+                say "-->       $source_name";
+                next SOURCE if $self->has_skip_result_sources && do { my $regex = $self->skip_result_sources; $source_name =~ m/$regex/; };
+                my $rs = $self->schema->resultset($source_name)->result_source;
+
+                RELATION:
+                for my $relation_name (sort $rs->relationships) {
+                    my $relation = $rs->relationship_info($relation_name);
+                    (my $other_source_name = $relation->{'class'}) =~ s{^.*?::Result::}{};
+
+                    next RELATION if $self->has_skip_result_sources && do { my $regex = $self->skip_result_sources; $other_source_name =~ m/$regex/; };
+                    next RELATION if any { $other_source_name eq $_ } (@sources, @add_sources);
+
+                    say "----->             $relation_name -> $other_source_name";
+                    push @add_sources, $other_source_name;
+                }
+                say '';
+            }
+            push @sources, @add_sources;
+        }
+        $self->result_sources(\@sources);
+    }
+    else {
+        @sources = sort @sources;
+    }
+
+    foreach my $source_name (@sources) {
         $self->add_node($source_name);
     }
-    foreach my $source_name (sort @sources) {
+    foreach my $source_name (@sources) {
         $self->add_edges($source_name);
     }
 }
@@ -94,6 +173,24 @@ sub svg {
 
     my $output;
     $self->graph->run(output_file => \$output, format => 'svg');
+
+    # remove padding
+    $output =~ s{<text [^>]*fill="white"[^>]*>_*?</text>}{}g;
+
+    # first add a thinner stroke-width to the last polygon in each <g> (the border around each table)
+    $output =~ s{ <polygon [^>]*\K />(?=[^<]* </g>)}{ stroke-width="0.4"/>}mxg;
+    # and then remove stroke-width's for a marked polygon (stroke-width="3")
+    $output =~ s{ <polygon [^>]* \K stroke-width="3" ([^>]*) stroke-width="0.4" />(?=[^<]* </g>)}{ $1 />}mxg;
+
+    # make it a bit lighter
+    $output =~ s{(fill|stroke)="black"}{$1="#444444"}g;
+
+    # Fix the graph name
+    my $schema_name = ref $self->schema;
+    $output =~ s{<title>Perl</title>}{<title>$schema_name</title>};
+
+    # Cleanup edge alt texts
+    $output =~ s{ <title>\K (?<origin_table>[^:]+) : (?<origin_column>[^&]+?) &.*? (?<destination_table>[^:;]+) : (?<destination_column>[^<]+) (?=</title>) }{$+{'origin_table'}.$+{'origin_column'} &#45;&gt; $+{'destination_table'}.$+{'destination_column'}}xg;
     return $output;
 }
 
@@ -122,7 +219,7 @@ sub add_node {
     }
     $self->graph->add_node(
         name => $node_name,
-        label => $self->create_label_html($node_name, $label_data),
+        label => $self->create_label_html($node_name, $label_data, { mark_label => $self->single_result_source && $source_name eq $self->result_sources->[0] ? 1 : 0 }),
         margin => 0.01,
     );
 }
@@ -131,13 +228,16 @@ sub add_edges {
     my $self = shift;
     my $source_name = shift;
 
-    my $node_name = $self->node_name($source_name);
     my $rs = $self->schema->resultset($source_name)->result_source;
 
     RELATION:
     for my $relation_name (sort $rs->relationships) {
+        my $node_name = $self->node_name($source_name);
+        $self->logger->info('relation name: ' . $relation_name);
         my $relation = $rs->relationship_info($relation_name);
         (my $other_source_name = $relation->{'class'}) =~ s{^.*?::Result::}{};
+
+        next RELATION if $self->has_skip_result_sources && do { my $regex = $self->skip_result_sources; $other_source_name =~ m/$regex/; };
         my $other_node_name = $self->node_name($other_source_name);
 
         # Have we already added the edge from the reversed direction?
@@ -150,8 +250,13 @@ sub add_edges {
         for my $other_relation_name ($other_rs->relationships) {
             my $relation_to_attempt = $other_rs->relationship_info($other_relation_name);
 
-            my $possibly_original_class = $relation_to_attempt->{'class'} =~ s{^.*?::Result::}{}rg;
+            (my $possibly_original_class = $relation_to_attempt->{'class'}) =~ s{^.*?::Result::}{};
             next OTHER_RELATION if $possibly_original_class ne $source_name;
+
+            # When we are rendering *part* of the schema, result_sources() doesn't contain all result sources in the schema, but only those we will display.
+            # If the current relation points to a result source outside the wanted degrees_of_separation, we are not interested.
+            next RELATION if $self->single_result_source && none { $other_source_name eq $_ } @{ $self->result_sources };
+
             $other_relation = $relation_to_attempt;
             $other_relation->{'_name'} = $other_relation_name;
         }
@@ -173,13 +278,35 @@ sub add_edges {
                              : $node_name
                              ;
 
+
+        # When displaying a single result source, and its closest relations, place some relations to the left and some to the right.
+        # The placement is dependent on the direction of the connection. Hence: invert some relations.
+        if($self->single_result_source) {
+            if(any { $_ eq $self->get_relation_type($relation) } (qw/belongs_to has_one/)) {
+                my $placeholder_node = $node_name;
+                $node_name = $other_node_name;
+                $other_node_name = $placeholder_node;
+
+                my $placeholder_arrow = $arrowhead;
+                $arrowhead = $arrowtail;
+                $arrowtail = $placeholder_arrow;
+
+                my $placeholder_port = $headport;
+                $headport = $tailport;
+                $tailport = $placeholder_port;
+            }
+        }
+
         $self->graph->add_edge(
-            from => "$node_name:$tailport",
-            to => "$other_node_name:$headport",
+            from => $node_name,
+            tailport => $tailport,
+            to => $other_node_name,
+            headport => $headport,
             arrowhead => $arrowhead,
             arrowtail => $arrowtail,
             dir => 'both',
             minlen => 2,
+            penwidth => 2,
         );
 
         $self->added_relationships->{ "$node_name-->$other_node_name" } = 1;
@@ -192,7 +319,7 @@ sub add_edges {
     }
 }
 
-sub get_arrow_type {
+sub get_relation_type {
     my $self = shift;
     my $relation = shift;
 
@@ -204,12 +331,37 @@ sub get_arrow_type {
     my $belongs_to = $accessor eq 'single' && $is_depends_on  && $join_type eq ''     ? 1 : 0;
     my $might_have = $accessor eq 'single' && !$is_depends_on && $join_type eq 'left' ? 1 : 0;
 
-    return $has_many   ? join ('' => qw/crow none odot/)
-         : $belongs_to ? join ('' => qw/none tee/)
-         : $might_have ? join ('' => qw/none tee none odot/)
-         :               join ('' => qw/dot dot dot/)
+    return $has_many   ? 'has_many'
+         : $belongs_to ? 'belongs_to'
+         : $might_have ? 'might_have'
+         :               'unknown'
          ;
+}
+sub get_arrow_type {
+    my $self = shift;
+    my $relation = shift;
 
+    my $relation_type = $self->get_relation_type($relation);
+
+    return $relation_type eq 'has_many'   ? join ('' => qw/crow none odot/)
+         : $relation_type eq 'belongs_to' ? join ('' => qw/none tee/)
+         : $relation_type eq 'might_have' ? join ('' => qw/none tee none odot/)
+         :                                  join ('' => qw/dot dot dot/)
+         ;
+}
+sub get_port_compass {
+    my $self = shift;
+    my $relation = shift;
+    my $is_origin = shift;
+
+    return '' if !$self->single_result_source;
+    my $relation_type = $self->get_relation_type($relation);
+
+    return $relation_type eq 'has_many'   ? $is_origin ? ':e' : ':w'
+         : $relation_type eq 'belongs_to' ? $is_origin ? ':w' : ':e'
+         : $relation_type eq 'might_have' ? $is_origin ? ':w' : ':e'
+         :                                  ''
+         ;
 }
 
 sub node_name {
@@ -231,6 +383,9 @@ sub create_label_html {
     my $self = shift;
     my $node_name = shift;
     my $data = shift;
+    my $args = shift;
+
+    my $mark_label = $args->{'mark_label'} || 0;
 
     my $column_html = [];
 
@@ -241,19 +396,28 @@ sub create_label_html {
 
         $column_name = $column->{'is_primary'} ? "<b>$column_name</b>" : $column_name;
         $column_name = $column->{'is_foreign'} ? "<u>$column_name</u>" : $column_name;
+
         push @{ $column_html } => qq{
-            <tr><td align="left" port="$clean_column_name"><font point-size="12">$column_name </font><font color="#ffffff">__</font></td></tr>};
+            <tr><td align="left" port="$clean_column_name" bgcolor="#fefefe"> <font point-size="12" color="#222222">$column_name</font><font color="white">_@{[ $self->padding($column_name) ]}</font></td></tr>};
     }
     my $html = qq{
-        <<table cellborder="0" cellpadding="1" cellspacing="0" border="1">
-            <tr><td bgcolor="#DDDFDD"><font point-size="2"> </font></td></tr>
-            <tr><td align="left" bgcolor="#DDDFDD"><b>$data->{'source_name'} </b> <font color="#DDDFDD"> </font></td></tr>
-            <tr><td><font point-size="4"> </font></td></tr>
+        <<table cellborder="0" cellpadding="1" cellspacing="0" border="@{[ $mark_label ? '3' : '1' ]}" width="150">
+            <tr><td bgcolor="#DDDFDD" width="150"><font point-size="1"> </font></td></tr>
+            <tr><td align="left" bgcolor="#DDDFDD"> <font color="#333333"><b>$data->{'source_name'}</b></font><font color="white">_@{[ $self->padding($data->{'source_name'}) ]}</font></td></tr>
+            <tr><td><font point-size="3"> </font></td></tr>
             } . join ('', @{ $column_html }) . qq{
         </table>>
     };
 
     return $html;
+}
+
+# graphviz (at least sometimes) draws too small boxes. We pad them a little (and remove the padding in svg())
+sub padding {
+    my $self = shift;
+    my $text = shift;
+
+    return '_' x int (length ($text) / 10);
 }
 
 1;
@@ -281,17 +445,24 @@ simple example (also available on L<Github|http://htmlpreview.github.io/?https:/
 
 =head2 schema
 
-Required instance of a L<DBIx::Class::Schema>.
+Required. An instance of a L<DBIx::Class::Schema> class.
 
 =head2 graphviz_config
 
 Optional hashref. This hashref is passed to the L<GraphViz2> constructor. Set this if the defaults don't work. Setting this will replace the defaults.
 
+Won't be used if you pass C<graph> to the constructor.
+
 =head2 graph
 
-Can't be passed in the constructor. This contains the constructed L<GraphViz2> object. Use this if you wish to render the visualization manually:
+Optional. A L<GraphViz2> object. Set this if you need to use an already constructed graph.
 
-    my $png = DBIx::Class::Visualizer->new(schema => $schema)->graph->run(output_file => 'myschema.png', format => 'png');
+It can be useful if you, for example, wishes to see the arguments to the dot renderer:
+
+    my $visualizer = DBIx::Class::Visualizer->new(schema => $schema);
+    my $svg = $visualizer->svg;
+
+    my $dotfile = $visualizer->graph->dot_input;
 
 
 =head1 METHODS
@@ -304,12 +475,17 @@ The constructor.
 
 Takes no arguments, and returns the rendered svg document as a string.
 
+=head2 run
+
+A shortcut for L<GraphViz2/run>:
+
+    DBIx::Class::Visualizer->new(schema => $schema)->run(output_file => 'myschema.png', format => 'png');
 
 
 =head1 SEE ALSO
 
 =for :list
 * L<Mojolicious::Plugin::DbicSchemaViewer> - A L<Mojolicious> plugin that uses this class
-* L<GraphViz2::DBI> - A similar idea
+* L<GraphViz2::DBI> - Visualizes a schema by inspecting the database.
 
 =cut
